test/libsolidity/syntaxTests/operators/custom/unary_operator_bind_function_without_parameters.sol
type Int is int;

using {
    f as ~
} for Int;

function f() returns (Int) {
    return Int.wrap(0);
}

// ----
// TypeError 4731: (30-31): The function "f" does not have any parameters, and therefore cannot be bound to the type "Int".
